samples/_failures_safe/1761175826_accb8c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e59c04af.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_e59c04af.c:157:16: error: missing terminating " character
  157 |         printf("Token %zu: %s ('%
      |                ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e59c04af.c:157:9: error: expected expression at end of input
  157 |         printf("Token %zu: %s ('%
      |         ^~~~~~
./samples/SAFE/__tmp_e59c04af.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e59c04af.c:157:9: error: expected declaration or statement at end of input
